tests/textual/error/appendString-wrong-both-arguments.uplc
(program 0.0.0 [ [ (builtin appendString) (con unit ()) ] (con integer 0) ])